Add CORS_ORIGIN to .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ENVIRONMENT=production
+CORS_ORIGIN=http://localhost:4200
 DATABASE_USERNAME=pulmo_rehab
 DATABASE_PASSWORD=
 DATABASE_NAME=pulmo_rehab_prod
